--- a/CandidateManagement_WPF_TDC/JobPostingWindow.xaml
+++ b/CandidateManagement_WPF_TDC/JobPostingWindow.xaml
@@ -61,19 +61,19 @@
                 >
             <StackPanel>
                 <TextBlock Text="Job Posting Details" 
-                         FontSize="20" 
-                         FontWeight="SemiBold"
-                         Margin="0,0,0,20"/>
+             FontSize="20" 
+             FontWeight="SemiBold"
+             Margin="0,0,0,20"/>
 
                 <TextBlock Text="Posting ID"/>
                 <Grid>
                     <TextBox x:Name="txt_PostID"/>
                     <Button x:Name="btn_Refresh"
-                            Content="New"
-                            HorizontalAlignment="Right"
-                            Margin="0,5,5,5"
-                            Padding="8,3"
-                            Click="btn_Refresh_Click"/>
+                Content="New"
+                HorizontalAlignment="Right"
+                Margin="0,5,5,5"
+                Padding="8,3"
+                Click="btn_Refresh_Click"/>
                 </Grid>
 
                 <TextBlock Text="Job Title" Margin="0,10,0,0"/>
@@ -84,30 +84,37 @@
 
                 <TextBlock Text="Description" Margin="0,10,0,0"/>
                 <RichTextBox x:Name="txt_description" 
-                            Height="150" 
-                            Margin="0,5"
-                            VerticalScrollBarVisibility="Auto"/>
+                Height="150" 
+                Margin="0,5"
+                VerticalScrollBarVisibility="Auto"/>
 
                 <StackPanel Orientation="Horizontal" 
-                          Margin="0,20,0,0"
-                          HorizontalAlignment="Center">
+              Margin="0,20,0,0"
+              HorizontalAlignment="Center">
                     <Button x:Name="btn_add" 
-                            Content="Add" 
-                            Click="btn_add_Click"/>
+                Content="Add" 
+                Click="btn_add_Click"/>
                     <Button x:Name="btn_update" 
-                            Content="Update"
-                            Click="btn_update_Click"/>
+                Content="Update"
+                Click="btn_update_Click"/>
                     <Button x:Name="btn_delete" 
-                            Content="Delete"
-                            Background="#F44336"
-                            Click="btn_delete_Click"/>
+                Content="Delete"
+                Background="#F44336"
+                Click="btn_delete_Click"/>
                 </StackPanel>
 
-                <Button x:Name="btn_close" 
-                        Content="Close"
-                        Background="#757575"
-                        Margin="0,10,0,0"
-                        Click="btn_close_Click"/>
+                <StackPanel Orientation="Horizontal" 
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center">
+                    <Button x:Name="btn_close" 
+                Content="Close"
+                Background="#757575"
+                Click="btn_close_Click"/>
+                    <Button x:Name="btn_logout" 
+                Content="Log Out"
+                Background="#FF5722"
+                Click="btn_logout_Click"/>
+                </StackPanel>
             </StackPanel>
         </Border>
 
